--- a/carpeta1/estilos.css
+++ b/carpeta1/estilos.css
@@ -1,15 +1,74 @@
-.fondo {
+body {
     background-color: bisque;
 }
 
 .Texto {
-    font-size: 80px;
+    font-size: 4.5em;
     color: brown;
     font-style: oblique;
 }
 
 .miTexto {
-    font-size: 30px;
+    font-size: 2.5em;
     color: rgb(4, 4, 74);
-    font-family: 'Courier New', Courier, monospace;
+}
+
+#Title1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#Title2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#lead{
+    width: 95vw;
+    margin: auto;
+}
+
+.imganime {
+    width: 200px;
+    height: 200px;
+}
+
+.Title3 {
+    font-size: 3.5em;
+}
+
+#Title {
+    width: 75vw;
+    margin: auto;
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards{
+    border: 2px solid crimson;
+    width: fit-content;
+    padding: 1em 2em 2em 2em;
+    border-radius: 10%;
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    align-items: center;
+}
+
+.cards:hover{
+    background-color: burlywood;
+}
+
+#cards-container {
+    background-color: aquamarine;
+    width: 90vw;
+    margin: auto;
+    margin-top: 3em;
+    border: 2px solid grey;
+    border-radius: 5%;
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
